注册与的登录连接到服务器

--- a/latte_ec/src/main/res/layout/delegate_sign_in.xml
+++ b/latte_ec/src/main/res/layout/delegate_sign_in.xml
@@ -104,7 +104,6 @@
                 android:text="{fa-weixin}"
                 android:textColor="#04b00f"
                 android:textSize="40sp" />
-
-        </>
+        </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.core.widget.NestedScrollView>
-</>
+</androidx.appcompat.widget.LinearLayoutCompat>
